--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <!-- Header Section -->
 	
-	    <div style="width:100%; height:40px; background-color:58D4FD;">
+	    <div style="width:100%; height:40px; background-color:#58D4FD;">
 	    	<span style="color:white">
 	    	    Welcome to my Index Page! Excuse the Mess!
 	    	</span> 
@@ -23,7 +23,7 @@
 
 
 <!-- Navigation Bar -->
-        <div style="width:100%; height:25px; background-color:86D7F2">
+        <div style="width:100%; height:25px; background-color:#86D7F2">
 	        <span style="color:white"> 
                 <a href="#">(Home)</a> 
                 <a href="#">(Projects)</a>  
@@ -43,7 +43,7 @@
 
         
 <!-- left Banner Box -->
-        <div style="width:70%; height:300px; float:left; background-color:7DCCE7"> 
+        <div style="width:70%; height:300px; float:left; background-color:#7DCCE7"> 
              <span style="color:white"> 
             Introduction Banner / Info Pic
              </span>
@@ -51,7 +51,7 @@
 <!-- left Banner Box end-->
 
 <!-- My picture Box (right)-->
-        <div style="width:29.95%; height:300px; background-color:7DCCE7; margin-left: 70.05%"> 
+        <div style="width:29.95%; height:300px; background-color:#7DCCE7; margin-left: 70.05%"> 
             <span style="color:white"> 
             My picture.
             </span>
@@ -63,10 +63,12 @@
 <!-- 3rd line across end-->
 
 <!-- Footer Section -->
-		<div style="width:100%; height:5%; background-color:58D4FD">
+		<div style="width:100%; height:5%; background-color:#58D4FD">
 		</div>
 <!-- End Footer Section -->
 
 
 	</body>
 </html>
+
+
