--- a/blog-template.html
+++ b/blog-template.html
@@ -53,3 +53,5 @@ The content should be easier to look at. Things should be simple and precise.
 What new semantic elements did you learn about (if any)?
 
 I learned to manipulate div boxes to create sections. 
+
+The blog wire template we used was: https://github.com/DannyHwangCA/DannyHwangCA.github.io/blob/master/imgs/blogtemplate.png
