--- a/blog-template.html
+++ b/blog-template.html
@@ -36,7 +36,7 @@ Intro message
 </body>
 
 </html>
-<!---Reflect -->
+<!--- Reflect
 
 How was it to wireframe and create an HTML page with a pair?
 
@@ -55,3 +55,4 @@ What new semantic elements did you learn about (if any)?
 I learned to manipulate div boxes to create sections. 
 
 The blog wire template we used was: https://github.com/DannyHwangCA/DannyHwangCA.github.io/blob/master/imgs/blogtemplate.png
+-->
