--- a/blog-template.html
+++ b/blog-template.html
@@ -36,7 +36,7 @@ Intro message
 </body>
 
 </html>
-<!-- Reflect
+<!-- Reflection:
 
 How was it to wireframe and create an HTML page with a pair?
 
