--- a/blog.html
+++ b/blog.html
@@ -57,7 +57,6 @@
 <!-- My picture Box (right)-->
         <div style="width:100%; height:300px; background-color:#7DCCE7;margin-left: 30%"> 
             <span style="color:white"> 
-            <div style="padding: 5px 20px 5px 20px">
                 <br>
                 Hello all!
                 <br><br>
@@ -80,7 +79,7 @@
                 
             </span>
         </div>
-<!-- My picture Box (right)-->
+<!-- My picture Box (right) end-->
 
 <!-- 3rd line across-->
         <div style="width:100%; height:1px; background-color:white"></div>
@@ -89,6 +88,8 @@
 <!-- Footer Section -->
 		<div style="width:100%; height:5%; background-color:#58D4FD">
 		    <a href="#"><img src=""></a>
+            <a href="#"><img src=""></a>
+            <a href="#"><img src=""></a>
 		</div>
 <!-- End Footer Section -->
 
