--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 <!-- Navigation Bar -->
         <div style="width:100%; height:25px; background-color:#86D7F2">
 	        <span style="color:white"> 
-                <a href="#">(Home)</a> 
+                <a href="http://dannyhwangca.github.io/index.html">(Home)</a> 
                 <a href="#">(Projects)</a>  
                 <a href="#">(Resume)</a>  
-                <a href="#">(Blog)</a>  
+                <a href="http://dannyhwangca.github.io/blog.html">(Blog)</a>  
                 <a href="#">(About Me)</a>  
                 <a href="#">(Contact Me)</a> 
             </span>
