--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 
 <!-- Footer Section -->
 	<div style="width:100%; height:5%; background-color:#58D4FD">
-		    <a href="https://www.facebook.com/"><img src="https://github.com/DannyHwangCA/DannyHwangCA.github.io/blob/master/imgs/facebook.png?raw=true"></a>
-            <a href="www.linkedin.com/in/DannyHwangCA"><img src="https://github.com/DannyHwangCA/DannyHwangCA.github.io/blob/master/imgs/linkin.png?raw=true"></a>
-            <a href="https://github.com/DannyHwangCA"><img src="https://github.com/DannyHwangCA/DannyHwangCA.github.io/blob/master/imgs/git-icon.png?raw=true"></a>
+		    <a href="https://www.facebook.com/" target="_blank"><img src="https://github.com/DannyHwangCA/DannyHwangCA.github.io/blob/master/imgs/facebook.png?raw=true"></a>
+            <a href="www.linkedin.com/in/DannyHwangCA" target="_blank"><img src="https://github.com/DannyHwangCA/DannyHwangCA.github.io/blob/master/imgs/linkin.png?raw=true"></a>
+            <a href="https://github.com/DannyHwangCA" target="_blank"><img src="https://github.com/DannyHwangCA/DannyHwangCA.github.io/blob/master/imgs/git-icon.png?raw=true"></a>
 		</div>
 <!-- End Footer Section -->
 
