--- a/blog.html
+++ b/blog.html
@@ -45,7 +45,7 @@
 <!-- left Blog Post Bar -->
         <div style="width:29.9%; height:300px; float:left; background-color:#7DCCE7"> 
             <br>
-            <a href="#"> Intro Page </a>
+            <a href="http://dannyhwangca.github.io/blog.html"> Intro Page </a>
             <br>
             <br>
             
