--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@
                 <a href="http://dannyhwangca.github.io/index.html">(Home)</a> 
                 <a href="#">(Projects)</a>  
                 <a href="#">(Resume)</a>  
-                <a href="http://dannyhwangca.github.io/blog.html">(Blog)</a>  
+                <a href="http://dannyhwangca.github.io/blog.html" target="_blank">(Blog)</a>  
                 <a href="#">(About Me)</a>  
                 <a href="#">(Contact Me)</a> 
             </span>
@@ -49,7 +49,7 @@
             <br>
             <br>
             
-            <a href="#"> Week 1 Blog Post! </a>
+            <a href="http://dannyhwangca.github.io/blog/git.html" > Week 1 Blog Post! </a>
            
 	    </div>
 <!-- left Blog Post Bar end-->
