--- a/blog.html
+++ b/blog.html
@@ -48,9 +48,9 @@
             <a href="http://dannyhwangca.github.io/blog.html" target="_blank"> Intro Page </a>
             <br>
             <br>
-            
             <a href="http://dannyhwangca.github.io/blog/git.html" target="_blank" > Week 1 Blog Post! </a>
-	    <a href="http://dannyhwangca.github.io/blog/git.html" target="_blank" > Week 1 Blog Post! </a>
+            <br>
+	    <a href="http://dannyhwangca.github.io/blog/git.html" target="_blank" > Week 1 Blog Post! Direct Change! </a>
 	    </div>
 <!-- left Blog Post Bar end-->
 
