--- a/blog-week1.html
+++ b/blog-week1.html
@@ -55,14 +55,13 @@
 <!-- left Blog Post Bar end-->
 
 <!-- My picture Box (right)-->
-        <div style="width:70.1%; height:300px; background-color:#7DCCE7;margin-left: 29.95%"> 
+        <div style="width:70.1%; height:1000px; background-color:#7DCCE7;margin-left: 29.95%"> 
             <span style="color:white"> 
                 <br>
-    <h1>Blog post 1 - Week 1 of Dev BootCamp</h1>
-    <h4>1/23/2016</h4>
+    Blog post 1 - Week 1 of Dev BootCamp
+    1/23/2016
   
-    <section>
-      <p>
+    <p>
         <b>Intro</b>
         <br><br>
         Hello all! 
