--- a/blog.html
+++ b/blog.html
@@ -45,12 +45,12 @@
 <!-- left Blog Post Bar -->
         <div style="width:29.9%; height:300px; float:left; background-color:#7DCCE7"> 
             <br>
-            <a href="http://dannyhwangca.github.io/blog.html" target="_blank"> Intro Page </a>
+            <a href="http://dannyhwangca.github.io/blog.html"> Intro Page </a>
             <br>
             <br>
             <a href="http://dannyhwangca.github.io/blog/git.html" target="_blank" > Week 1 Blog Post! </a>
             <br>
-	    <a href="http://dannyhwangca.github.io/blog/git.html" target="_blank" > Week 1 Blog Post! Direct Change! </a>
+	    <a href="http://dannyhwangca.github.io/blog-week1.html"> Week 1 Blog Post! Direct Change! </a>
 	    </div>
 <!-- left Blog Post Bar end-->
 
