--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@
                 <a href="http://dannyhwangca.github.io/index.html">(Home)</a> 
                 <a href="#">(Projects)</a>  
                 <a href="#">(Resume)</a>  
-                <a href="http://dannyhwangca.github.io/blog.html" target="_blank">(Blog)</a>  
+                <a href="http://dannyhwangca.github.io/blog.html">(Blog)</a>  
                 <a href="#">(About Me)</a>  
                 <a href="#">(Contact Me)</a> 
             </span>
@@ -48,7 +48,7 @@
             <a href="http://dannyhwangca.github.io/blog.html"> Intro Page </a>
             <br>
             <br>
-            <a href="http://dannyhwangca.github.io/blog/git.html" target="_blank" > Week 1 Blog Post! </a>
+            <a href="http://dannyhwangca.github.io/blog/git.html" target="_blank" > Week 1 Blog Post! (New Tab) </a>
             <br>
 	    <a href="http://dannyhwangca.github.io/blog-week1.html"> Week 1 Blog Post! Direct Change! </a>
 	    </div>
