--- a/blog-week1.html
+++ b/blog-week1.html
@@ -28,7 +28,7 @@
                 <a href="http://dannyhwangca.github.io/index.html">(Home)</a> 
                 <a href="#">(Projects)</a>  
                 <a href="#">(Resume)</a>  
-                <a href="http://dannyhwangca.github.io/blog.html">(Blog)</a>  
+                <a href="http://dannyhwangca.github.io/blog-week1.html">(Blog)</a>  
                 <a href="#">(About Me)</a>  
                 <a href="#">(Contact Me)</a> 
             </span>
