--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>My Index Page</title>
-		<link rel="stylesheet" type="text/css" href="/stylesheets/default.css">
+		<link rel="stylesheet" type="text/css" href="DannyHwangCA.github.io/stylesheets/default.css">
 	</head>
 	<body>
 
