--- a/index.html
+++ b/index.html
@@ -16,14 +16,12 @@
 
 <!-- Navigation Bar -->
         <div class="nav">
-	        <span style="color:white"> 
-                <a href="http://dannyhwangca.github.io/index.html">(Home)</a> 
+	        <a class="navbutton" href="http://dannyhwangca.github.io/index.html">(Home)</a> 
                 <a href="#">(Projects)</a>  
                 <a href="#">(Resume)</a>  
                 <a href="http://dannyhwangca.github.io/blog.html">(Blog)</a>  
                 <a href="#">(About Me)</a>  
                 <a href="#">(Contact Me)</a> 
-            </span>
          </div>
   
 <!-- Navigation bar end -->
