--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <!-- Navigation Bar -->
         <div class="nav">
-	        <a class="navbutton" href="http://dannyhwangca.github.io/index.html">(Home)</a> 
+	        <a class="navbutton" href="http://dannyhwangca.github.io/index.html"><span>(Home)</span></a> 
                 <a href="#">(Projects)</a>  
                 <a href="#">(Resume)</a>  
                 <a href="http://dannyhwangca.github.io/blog.html">(Blog)</a>  
