--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 
 <!-- Navigation Bar -->
         <div class="nav">
-	        <a class="navbutton" href="http://dannyhwangca.github.io/index.html"><span>(Home)</span></a> 
-                <a href="#">(Projects)</a>  
-                <a href="#">(Resume)</a>  
-                <a href="http://dannyhwangca.github.io/blog.html">(Blog)</a>  
-                <a href="#">(About Me)</a>  
-                <a href="#">(Contact Me)</a> 
+	        <a class="navbutton" href="http://dannyhwangca.github.io/index.html"><span>Home</span></a> 
+                <a class="navbutton" href="#">Projects</a>  
+                <a class="navbutton" href="#">Resume</a>  
+                <a class="navbutton" href="http://dannyhwangca.github.io/blog.html">Blog</a>  
+                <a class="navbutton" href="#">About Me</a>  
+                <a class="navbutton" href="#">Contact Me</a> 
          </div>
   
 <!-- Navigation bar end -->
