--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         
 <!-- left Banner Box -->
         <div class="leftside"> 
-        	<img class="welcomepicture" src="https://i.imgur.com/GGhaFNj.png">
+        	<img class="welcomepicture" src="https://i.imgur.com/R9NYpci.png">
         </div>
 <!-- left Banner Box end-->
 
