--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <!-- My picture Box (right)-->
         <div class="rightside"> 
-            <img class="mypicture" src="https://i.imgur.com/cJWXc5u.png">
+            <img class="mypicture" src="https://i.imgur.com/kiHVwUi.png">
          </div>
 <!-- My picture Box (right)-->
 
