--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
         
 <!-- left Banner Box -->
         <div class="leftside"> 
-        	<img class="welcomepicture" src="https://i.imgur.com/DfKTDWD.png">
+        	<img class="welcomepicture" src="https://i.imgur.com/DfKTDWD.png" alt="Welcome Image!">
         </div>
 <!-- left Banner Box end-->
 
 <!-- My picture Box (right)-->
         <div class="rightside"> 
-            <img class="mypicture" src="https://i.imgur.com/949W3ow.png">
+            <img class="mypicture" src="https://i.imgur.com/949W3ow.png" alt="My Picture!">
          </div>
 <!-- My picture Box (right)-->
 
@@ -49,4 +49,3 @@
 
 	</body>
 </html>
-
