--- a/blog.html
+++ b/blog.html
@@ -30,7 +30,7 @@
 
 <!-- left Blog Post Bar -->
         <div class="leftbar"> 
-            <a href="http://dannyhwangca.github.io/blog.html"> Intro Page </a>
+            <a href="http://dannyhwangca.github.io/blog.html" class="Intropadding"> Intro Page </a>
             <a href="http://dannyhwangca.github.io/blog/git.html" target="_blank" > Week 1 Blog Post! (New Tab) </a>
 	    <a href="http://dannyhwangca.github.io/blog-week1.html"> Week 1 Blog Post! Direct Change! </a>
 	</div>
@@ -38,7 +38,6 @@
 
 <!-- My picture Box (right)-->
         <div class="rightbar"> 
-            <span style="color:white"> 
                 <br>
                 Hello all!
                 <br><br>
@@ -56,16 +55,8 @@
                         <li>Update week 2 blog!</li>
                         <li>GPS 2~! Thursday 02/04/2016 </li>
                     </ul>
-            </div>        
-                
-                
-            </span>
-        </div>
+        </div>        
 <!-- My picture Box (right) end-->
-
-<!-- 3rd line across-->
-        <div style="width:100%; height:1px; background-color:white"></div>
-<!-- 3rd line across end-->
 
 <!-- Footer Section -->
 	<div class="footer">
