--- a/blog.html
+++ b/blog.html
@@ -30,9 +30,9 @@
 
 <!-- left Blog Post Bar -->
         <div class="leftbar"> 
-            <a href="http://dannyhwangca.github.io/blog.html" class="Intropadding"> Intro Page </a>
-            <a href="http://dannyhwangca.github.io/blog/git.html" target="_blank" > Week 1 Blog Post! (New Tab) </a>
-	    <a href="http://dannyhwangca.github.io/blog-week1.html"> Week 1 Blog Post! Direct Change! </a>
+            <a class="Intropadding" href="http://dannyhwangca.github.io/blog.html"> Intro Page </a>
+            <a class="articlepadding" href="http://dannyhwangca.github.io/blog/git.html" target="_blank" > Week 1 Blog Post! (New Tab) </a>
+	    <a class="articlepadding" href="http://dannyhwangca.github.io/blog-week1.html"> Week 1 Blog Post! Direct Change! </a>
 	</div>
 <!-- left Blog Post Bar end-->
 
