--- a/blog.html
+++ b/blog.html
@@ -30,7 +30,7 @@
 
 <!-- left Blog Post Bar -->
         <div class="leftbar"> 
-            <a class="Intropadding" href="http://dannyhwangca.github.io/blog.html"> Intro Page </a>
+            <a class="intropadding" href="http://dannyhwangca.github.io/blog.html"> Intro Page </a>
             <a class="articlepadding" href="http://dannyhwangca.github.io/blog/git.html" target="_blank" > Week 1 Blog Post! (New Tab) </a>
 	    <a class="articlepadding" href="http://dannyhwangca.github.io/blog-week1.html"> Week 1 Blog Post! Direct Change! </a>
 	</div>
