--- a/blog.html
+++ b/blog.html
@@ -37,7 +37,7 @@
 
 <!-- My picture Box (right)-->
         <div class="rightbar"> 
-                <br>
+                <p class="rightbartext">
                 Hello all!
                 <br><br>
                 Welcome to my introduction page!
@@ -54,6 +54,7 @@
                         <li>Update week 2 blog!</li>
                         <li>GPS 2~! Thursday 02/04/2016 </li>
                     </ul>
+                </p>
         </div>        
 <!-- My picture Box (right) end-->
 
