--- a/blog.html
+++ b/blog.html
@@ -37,7 +37,9 @@
 
 <!-- My picture Box (right)-->
         <div class="rightbar"> 
-                <p class="rightbartext">
+        
+                <div class="rightbartext">
+                <p>
                 Hello all!
                 <br><br>
                 Welcome to my introduction page!
@@ -55,6 +57,7 @@
                         <li>GPS 2~! Thursday 02/04/2016 </li>
                     </ul>
                 </p>
+                </div>
         </div>        
 <!-- My picture Box (right) end-->
 
