--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
 	</head>
 
 	<link rel="stylesheet" type="text/css" href="DannyHwangCA.github.io/stylesheets/default.css">
-	<link rel="stylesheet" type="text/css" href="https://github.com/DannyHwangCA/DannyHwangCA.github.io/blob/master/stylesheets/blog.css">
+	<link rel="stylesheet" type="text/css" href="DannyHwangCA.github.io/stylesheets/blog.css">
 
 <!-- Header Section -->
 	<body>
