--- a/blog.html
+++ b/blog.html
@@ -31,7 +31,7 @@
 <!-- left Blog Post Bar -->
         <div class="leftbar"> 
             <a class="intropadding" href="http://dannyhwangca.github.io/blog.html"> Intro Page </a>
-            <a class="articlepadding" href="http://dannyhwangca.github.io/blog-week1.html"> Week 1 Blog Post! (01/23/2016)</a>
+            <a class="articlepadding" href="http://dannyhwangca.github.io/git.html"> Week 1 Blog Post! (01/23/2016)</a>
 	</div>
 <!-- left Blog Post Bar end-->
 
