--- a/blog.html
+++ b/blog.html
@@ -46,15 +46,15 @@
                 <br><br>
                 Current Updates This Week: 
                     <ul>
-                        <li>Created index site!</li>
-                        <li>Created blog stie!</li>
-                        <li>Uploaded week1 blog!</li>
+                        <li>Update Index site with CSS!</li>
+                        <li>Update Blog Site with CSS!</li>
+                        <li>Update Blog Site with Week 3 Blog</li>
                     </ul>
                 Upcoming Updates:
                      <ul>
-                        <li>Customize site with CSS</li>
-                        <li>Update week 2 blog!</li>
-                        <li>GPS 2~! Thursday 02/04/2016 </li>
+                        <li>Ruby</li>
+                        <li>GPS week 2 series</li>
+                        <li>Additional upgrades to site!</li>
                     </ul>
                 </p>
                 </div>
