--- a/blog.html
+++ b/blog.html
@@ -32,7 +32,8 @@
 <!-- left Blog Post Bar -->
         <div class="leftbar"> 
             <a class="intropadding" href="http://dannyhwangca.github.io/blog.html"> Intro Page </a>
-            <a class="articlepadding" href="http://dannyhwangca.github.io/git.html"> Week 1 Blog Post! (01/23/2016)</a>
+            <a class="articlepadding" href="http://dannyhwangca.github.io/git.html"> Week 1 - Version Control and Git</a>
+            <a class="articlepadding" href="#"> Week 2 - Css Concepts and Meaning</a>
 	</div>
 <!-- left Blog Post Bar end-->
 
