--- a/blog.html
+++ b/blog.html
@@ -33,7 +33,7 @@
         <div class="leftbar"> 
             <a class="intropadding" href="http://dannyhwangca.github.io/blog.html"> Intro Page </a>
             <a class="articlepadding" href="http://dannyhwangca.github.io/git.html"> Post 1: Version Control & Git</a>
-            <a class="articlepadding" href="#"> Post 2: Css Concepts & Meaning</a>
+            <a class="articlepadding" href="#"> Post 2: Css Concepts</a>
             <a class="articlepadding" href="#"> Post 3: Do Be Determined!</a>
 	</div>
 <!-- left Blog Post Bar end-->
