--- a/git.html
+++ b/git.html
@@ -34,6 +34,8 @@
         <div class="leftbar"> 
             <a class="intropadding" href="http://dannyhwangca.github.io/blog.html"> Intro Page </a>
             <a class="articlepadding" href="http://dannyhwangca.github.io/git.html" > Week 1 Blog Post! (01/23/2016)</a>
+            <a class="articlepadding" href="#"> Post 2: Css Concepts</a>
+            <a class="articlepadding" href="#"> Post 3: Do Be Determined!</a>
 	</div>
 <!-- left Blog Post Bar end-->
 
