--- a/git.html
+++ b/git.html
@@ -35,7 +35,8 @@
             <a class="intropadding" href="http://dannyhwangca.github.io/blog.html"> Intro Page </a>
             <a class="articlepadding" href="http://dannyhwangca.github.io/git.html"> Post 1: Version Control & Git</a>
             <a class="articlepadding" href="http://dannyhwangca.github.io/css-concepts.html"> Post 2: Css Concepts</a>
-            <a class="articlepadding" href="#"> Post 3: Do Be Determined!</a>
+   <a class="articlepadding" href="http://dannyhwangca.github.io/arrays-hashes.html"> Post 3: Arrays Vs Hashes!</a>
+            <a class="articlepadding" href="#"> Post 4: Do Be Determined!</a>
 	</div>
 <!-- left Blog Post Bar end-->
 
