--- a/blog-template.html
+++ b/blog-template.html
@@ -30,8 +30,11 @@
 
 <!-- left Blog Post Bar -->
         <div class="leftbar"> 
-            <a class="intropadding" href="http://dannyhwangca.github.io/blog.html"> Intro Page </a>
-            <a class="articlepadding" href="http://dannyhwangca.github.io/git.html" > Week 1 Blog Post! (01/23/2016)</a>
+      <a class="intropadding" href="http://dannyhwangca.github.io/blog.html"> Intro Page </a>
+            <a class="articlepadding" href="http://dannyhwangca.github.io/git.html"> Post 1: Version Control & Git</a>
+            <a class="articlepadding" href="#"> Post 2: Css Concepts</a>
+	    <a class="articlepadding" href="http://dannyhwangca.github.io/arrays-hashes.html"> Post 3: Arrays Vs Hashes!</a>
+            <a class="articlepadding" href="#"> Post 4: Do Be Determined!</a>
 	</div>
 <!-- left Blog Post Bar end-->
 
