--- a/git.html
+++ b/git.html
@@ -35,7 +35,7 @@
             <a class="intropadding" href="http://dannyhwangca.github.io/blog.html"> Intro Page </a>
             <a class="articlepadding" href="http://dannyhwangca.github.io/git.html"> Post 1: Version Control & Git</a>
             <a class="articlepadding" href="http://dannyhwangca.github.io/css-concepts.html"> Post 2: Css Concepts</a>
-   <a class="articlepadding" href="http://dannyhwangca.github.io/arrays-hashes.html"> Post 3: Arrays Vs Hashes!</a>
+   	    <a class="articlepadding" href="http://dannyhwangca.github.io/arrays-hashes.html"> Post 3: Arrays Vs Hashes!</a>
             <a class="articlepadding" href="#"> Post 4: Do Be Determined!</a>
 	</div>
 <!-- left Blog Post Bar end-->
@@ -45,7 +45,7 @@
         
                 <div class="rightbartext">
 <main>
-    <h1>Blog post 1 - Week 1 of Dev BootCamp</h1>
+    <h1>Version Control and Git! A Review!</h1>
    
     <section>
     	<h4>1/23/2016</h4>
