--- a/arrays-hashes.html
+++ b/arrays-hashes.html
@@ -64,7 +64,7 @@ Likewise: array[1] will call the 2nd element of an array
 Array = [“cat”, “dog”, “meow”]
 
 array[2] = “meow”
-</div
+</div>
 <br>
 <b>A hash is a collection of pairs of information. And each pair is made up of a “key” and “value”.</b>
 <br><br>
