--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 <!-- Middle Section -->
 
 <div class="middlesection"
-<b> Contact Email: mailto:DannyHwangCA@gmail.com</b>
+<b> Contact Email: mailto://DannyHwangCA@gmail.com</b>
 
 </div>
 
