--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,11 @@
 <!-- Middle Section -->
 
 <div class="middlesection"
+<br>
 <b> Contact Email: <a href="mailto:DannyHwangCa@gmail.com?Subject=Hello%20again" target="_top">DannyHwangCA@gmail.com</a></b>
+<br> Or <br>
+Follow Me Below!
+<br>
 
 </div>
 
