--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 <!-- Middle Section -->
 
 <div class="middlesection"
-<span class="contact_me_padding"
+<span class="contact_me_padding">
 <br>
 <b> Contact Email: <a href="mailto:DannyHwangCa@gmail.com?Subject=Hello%20again" target="_top">DannyHwangCA@gmail.com</a></b>
 <br> Or <br>
