--- a/contact.html
+++ b/contact.html
@@ -31,10 +31,11 @@
 <div class="middlesection"
 
 <br>
-<b> Contact Email: <a href="mailto:DannyHwangCa@gmail.com?Subject=Hello%20again" target="_top">DannyHwangCA@gmail.com</a></b>
+<b> 
+Contact Email: <a href="mailto:DannyHwangCa@gmail.com?Subject=Hello%20again" target="_top">DannyHwangCA@gmail.com</a>
 <br> Or <br>
 Follow Me Below!
-
+</b>
 <br>
 
 </div>
