--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
                 <a class="navbutton" href="#">Resume</a>  
                 <a class="navbutton" href="http://dannyhwangca.github.io/blog.html">Blog</a>  
                 <a class="navbutton" href="#">About Me</a>  
-                <a class="navbutton" href="#">Contact Me</a> 
+                <a class="navbutton" href="https://dannyhwangca.github.io/contact.html">Contact Me</a> 
          </div>
   
 <!-- Navigation bar end -->
