--- a/blog-template.html
+++ b/blog-template.html
@@ -34,7 +34,8 @@
             <a class="articlepadding" href="http://dannyhwangca.github.io/git.html"> Post 1: Version Control & Git</a>
             <a class="articlepadding" href="#"> Post 2: Css Concepts</a>
 	    <a class="articlepadding" href="http://dannyhwangca.github.io/arrays-hashes.html"> Post 3: Arrays Vs Hashes!</a>
-            <a class="articlepadding" href="#"> Post 4: Do Be Determined!</a>
+	    <a class="articlepadding" href="https://dannyhwangca.github.io/enumerable-methods.html"> Post 4: Enumerables! .map!</a>
+            <a class="articlepadding" href="#"> Post 5: Do Be Determined!</a>
 	</div>
 <!-- left Blog Post Bar end-->
 
