--- a/about.html
+++ b/about.html
@@ -30,12 +30,30 @@
 
 <div class="middlesection"
 
+<h4>About me:</h4>
+<b> About my origins:</b>
 <br>
-<b> 
-Contact Email: <a href="mailto:DannyHwangCa@gmail.com?Subject=Hello%20again" target="_top">DannyHwangCA@gmail.com</a>
-<br> Or <br>
-Follow Me Below!
-</b>
+I am originally from a small island country called Taiwan. But, at the age of 5, I moved with my parents to San Gabriel USA. So, I’ve spend my whole life in the LA County region.
+<br>
+So, if I had to describe myself, I am  just a good old Californian. 
+<br>
+<b> My Interests and Hobbies </b>
+<br>
+My main hobby is digital art. I mostly draw fantasy / scifi art for art contests for various videogames. 
+<br> 
+This also led me to be a graphic designer for my previous employers’ websites. 
+<br>
+<b> Educational Experiences </b>
+<br>
+I graduated from UC Davis with an Bachelors Degree in Economics.  
+<br>
+I am also licensed with the state of California for Life, Health, and Causalty insurance.
+<br>
+I am currently attending Dev Bootcamp to advance my career and passion in coding!
+<br>
+<b> A Quirk </b>
+<br>
+I love animals. And really really care about my dog.
 <br>
 
 </div>
