--- a/blog-template.html
+++ b/blog-template.html
@@ -17,14 +17,13 @@
 
 <!-- Navigation Bar -->
      	<div class="nav">
-      <a class="intropadding" href="http://dannyhwangca.github.io/blog.html"> Intro Page </a>
-            <a class="articlepadding" href="http://dannyhwangca.github.io/git.html"> Post 1: Version Control & Git</a>
-            <a class="articlepadding" href="http://dannyhwangca.github.io/css-concepts.html"> Post 2: Css Concepts</a>
-	    <a class="articlepadding" href="http://dannyhwangca.github.io/arrays-hashes.html"> Post 3: Arrays Vs Hashes!</a>
-	    <a class="articlepadding" href="https://dannyhwangca.github.io/enumerable-methods.html"> Post 4: Enumerables! .map!</a>
-            <a class="articlepadding" href="#"> Post 5: Do Be Determined!</a>
+	        <a class="navbutton" href="http://dannyhwangca.github.io/index.html"><span>Home</span></a> 
+                <a class="navbutton" href="#">Projects</a>  
+                <a class="navbutton" href="#">Resume</a>  
+                <a class="navbutton" href="http://dannyhwangca.github.io/blog.html">Blog</a>  
+                <a class="navbutton" href="https://dannyhwangca.github.io/about.html">About Me</a>  
+                <a class="navbutton" href="https://dannyhwangca.github.io/contact.html">Contact Me</a> 
          </div>
-  
   
 <!-- Navigation bar end -->
 
