--- a/blog.html
+++ b/blog.html
@@ -30,13 +30,14 @@
 <!-- Navigation bar end -->
 
 <!-- left Blog Post Bar -->
-        <div class="leftbar"> 
-      <a class="intropadding" href="http://dannyhwangca.github.io/blog.html"> Intro Page </a>
-            <a class="articlepadding" href="http://dannyhwangca.github.io/git.html"> Post 1: Version Control & Git</a>
-            <a class="articlepadding" href="http://dannyhwangca.github.io/css-concepts.html"> Post 2: Css Concepts</a>
-	    <a class="articlepadding" href="http://dannyhwangca.github.io/arrays-hashes.html"> Post 3: Arrays Vs Hashes!</a>
-	    <a class="articlepadding" href="https://dannyhwangca.github.io/enumerable-methods.html"> Post 4: Enumerables! .map!</a>
-            <a class="articlepadding" href="#"> Post 5: Do Be Determined!</a>
+      <div class="leftbar"> 
+      	<a class="intropadding" href="http://dannyhwangca.github.io/blog.html"> Intro Page </a>
+      	<a class="articlepadding" href="http://dannyhwangca.github.io/git.html"> Post 1: Version Control & Git</a>
+	<a class="articlepadding" href="http://dannyhwangca.github.io/css-concepts.html"> Post 2: Css Concepts</a>
+ 	<a class="articlepadding" href="http://dannyhwangca.github.io/arrays-hashes.html"> Post 3: Arrays Vs Hashes!</a>
+	<a class="articlepadding" href="https://dannyhwangca.github.io/enumerable-methods.html"> Post 4: Enumerables! .map!</a>
+      	<a class="articlepadding" href="https://dannyhwangca.github.io/ruby-classes.html"> Post 5: Ruby-Classes!</a>
+      	<a class="articlepadding" href="#"> Post 6: Do Be Determined!</a>
 	</div>
 <!-- left Blog Post Bar end-->
 
