--- a/projects/index.html
+++ b/projects/index.html
@@ -1,1 +1,55 @@
 
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Project Information</title>
+		<link rel="stylesheet" type="text/css" href="DannyHwangCA.github.io/stylesheets/default.css">
+	</head>
+	<body>
+
+<!-- Header Section -->
+	
+	    <div class="header">
+	      	   Ongoing Projects
+	    </div>
+	    
+<!-- Header Section end -->
+
+<!-- Navigation Bar -->
+        <div class="nav">
+	        <a class="navbutton" href="http://dannyhwangca.github.io/index.html"><span>Home</span></a> 
+                <a class="navbutton" href="#">Projects</a>  
+                <a class="navbutton" href="#">Resume</a>  
+                <a class="navbutton" href="http://dannyhwangca.github.io/blog.html">Blog</a>  
+                <a class="navbutton" href="https://dannyhwangca.github.io/about.html">About Me</a>  
+                <a class="navbutton" href="https://dannyhwangca.github.io/contact.html">Contact Me</a> 
+         </div>
+  
+<!-- Navigation bar end -->
+
+<!-- Middle Section -->
+
+<div class="middlesection"
+
+<h3>Ongoing Projects</h3>
+<a class="navbutton" href="#">Solving C.J.Gregor's Quantum Composite Theory!</a>
+<a class="navbutton" href="#">Analysis of Joseph Manning's wave length theory on particle strings.</a>
+<a class="navbutton" href="#">Review of Steven Hawking's - Time Dialation and Spacial Recognition Manifest. </a>
+<a class="navbutton" href="#">TBA - even more exciciting things!</a> 
+
+  
+</div>
+
+<!-- End Middle Section -->
+
+<!-- Footer Section -->
+	<div class="footer">
+		    <a href="https://www.facebook.com/" target="_blank"><img class="footerimg" src="https://github.com/DannyHwangCA/DannyHwangCA.github.io/blob/master/imgs/facebook.png?raw=true" alt="FaceBook!"></a>
+            <a href="https://www.linkedin.com/in/DannyHwangCA" target="_blank"><img class="footerimg" src="https://github.com/DannyHwangCA/DannyHwangCA.github.io/blob/master/imgs/linkin.png?raw=true" alt="LinkedIn"></a>
+            <a href="https://github.com/DannyHwangCA" target="_blank"><img class="footerimg" src="https://github.com/DannyHwangCA/DannyHwangCA.github.io/blob/master/imgs/git-icon.png?raw=true" alt="Github!"></a>
+		</div>
+<!-- End Footer Section -->
+
+
+	</body>
+</html>
