--- a/projects/index.html
+++ b/projects/index.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<title>Project Information</title>
-		<link rel="stylesheet" type="text/css" href="DannyHwangCA.github.io/stylesheets/default.css">
+		<link rel="stylesheet" type="text/css" href="../stylesheets/default.css">
 	</head>
 	<body>
 
