--- a/projects/index.html
+++ b/projects/index.html
@@ -35,7 +35,7 @@
 <br>
 <a class="navbutton" href="#">Solving C.J.Gregor's Quantum Composite Theory!</a>
 <br><br>
-<a class="navbutton" href="#">Analysis of Joseph Manning's wave length theory on particle strings.</a>
+<a class="navbutton" href="#">Analysis of Joseph Manning's wave length synopsis on particle strings.</a>
 <br><br>
 <a class="navbutton" href="#">Review of Steven Hawking's - Time Dialation and Spacial Recognition Manifest. </a>
 <br><br>
