--- a/projects/index.html
+++ b/projects/index.html
@@ -18,7 +18,7 @@
 <!-- Navigation Bar -->
         <div class="nav">
 	        <a class="navbutton" href="http://dannyhwangca.github.io/index.html"><span>Home</span></a> 
-                <a class="navbutton" href="#">Projects</a>  
+                <a class="navbutton" href="https://dannyhwangca.github.io/projects/index.html">Projects</a>  
                 <a class="navbutton" href="#">Resume</a>  
                 <a class="navbutton" href="http://dannyhwangca.github.io/blog.html">Blog</a>  
                 <a class="navbutton" href="https://dannyhwangca.github.io/about.html">About Me</a>  
