--- a/arrays-hashes.html
+++ b/arrays-hashes.html
@@ -36,7 +36,8 @@
  	<a class="articlepadding" href="http://dannyhwangca.github.io/arrays-hashes.html"> Post 3: Arrays Vs Hashes!</a>
 	<a class="articlepadding" href="https://dannyhwangca.github.io/enumerable-methods.html"> Post 4: Enumerables! .map!</a>
       	<a class="articlepadding" href="https://dannyhwangca.github.io/ruby-classes.html"> Post 5: Ruby-Classes!</a>
-      	<a class="articlepadding" href="#"> Post 6: Do Be Determined!</a>
+      	<a class="articlepadding" href="https://dannyhwangca.github.io/Javascript.html"> Post 6: Javascript & Ruby!</a>
+      	<a class="articlepadding" href="#"> Post 7: Do Be Determined!</a>
 	</div>
 <!-- left Blog Post Bar end-->
 
