--- a/tech.html
+++ b/tech.html
@@ -52,13 +52,19 @@ In this post, we're reviewing recursion and it's role and uses in our modern com
 <h3> What is recursion? </h3>
 Recursion is a method where the solution for a problem can be derived from smaller processed instances of that same problem. 
 <br><br>
-Many computer programming languages support recursion by allowing a function to call on itself.
-<br><br>
 Some programs use functional programming languages that do not use looping to solve problems but instead use recursion to call and process code 
 <br><br>
 These languages can solve the same problems as more commonly used imperative languages without using iteration constructs such as "while" or "for".
 <br><br>
-That being said, most languages do support both recursion and looping as 
+That being said, most languages do support both recursion and looping as acceptable code by allowing a function to call itself. 
+<br><br>
+<h3> How does recursion relate to computer programming?</h3>
+
+A common recursion technique in programming is to divide a problem into sub-problems that are similar to the original.
+<br><br>
+Using this method we solve the sub-problems and combine the results. 
+<br><br>
+This is called the "divide-and-conquer" method when we store the results of these subproblems in a table and 
 
   </main>
   </div>
