--- a/tech.html
+++ b/tech.html
@@ -58,13 +58,30 @@ These languages can solve the same problems as more commonly used imperative lan
 <br><br>
 That being said, most languages do support both recursion and looping as acceptable code by allowing a function to call itself. 
 <br><br>
-<h3> How does recursion relate to computer programming?</h3>
+<h3> What does recursion do for computer programming?</h3>
 
 A common recursion technique in programming is to divide a problem into sub-problems that are similar to the original.
 <br><br>
-Using this method we solve the sub-problems and combine the results. 
+Using this method, the divide-and conquer method, we solve the sub-problems and combine the results. 
 <br><br>
-This is called the "divide-and-conquer" method when we store the results of these subproblems in a table and 
+If we store the results of these subproblems in a table, this is then called dynamic programming or memoization, which, is an optimization technique used to pulled stored results from a cache of results from complex calculations.
+<br><br>
+In turn, a recursive function’s role is to break down complex inputs into simpler ones.  
+<br><br>
+<h3> Are there different types of recursions? </h3>
+Recursions that contain only a single self reference is a single recursion. Similarly, recursions with multiple self references are known as multiple recursions. 
+<br><br>
+Common single recursions types in the modern world are linear searches, factorial compuatations, and processing list traversals. 
+<br><br>
+Common multiple recursions types are depth first searches and tree traversal (which is a process that checks and processes nodes in a tree data structure) a single time.).
+<br><br>
+Additionally, there are also direct and indirect recursions.
+<br><br>
+The most common type of recursion are direct recursions. Direct recursions are where the functions calls itself. 
+<br><br>
+Indirect recursions occurs when a function is not called by itself but by another function. Indirect recursions are also known as mutual recursions.  
+<br><br>
+I hope this has given you more insight into the uses of recursions within the modern world. 
 
   </main>
   </div>
