--- a/ruby-classes.html
+++ b/ruby-classes.html
@@ -37,7 +37,8 @@
 	<a class="articlepadding" href="https://dannyhwangca.github.io/enumerable-methods.html"> Post 4: Enumerables! .map!</a>
       	<a class="articlepadding" href="https://dannyhwangca.github.io/ruby-classes.html"> Post 5: Ruby-Classes!</a>
       	<a class="articlepadding" href="https://dannyhwangca.github.io/Javascript.html"> Post 6: Javascript & Ruby!</a>
-      	<a class="articlepadding" href="#"> Post 7: Do Be Determined!</a>
+      	<a class="articlepadding" href="https://dannyhwangca.github.io/tech.html"> Post 7: Recursion in Tech!</a>
+      	<a class="articlepadding" href="#"> Post 8: To Be Determined!</a>
 	</div>
 <!-- left Blog Post Bar end-->
 
