--- a/projects/cheat-sheet.html
+++ b/projects/cheat-sheet.html
@@ -1,1 +1,66 @@
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>My Cheat Sheet</title>
+	</head>
 
+	<link rel="stylesheet" type="text/css" href="DannyHwangCA.github.io/stylesheets/default.css">
+	<link rel="stylesheet" type="text/css" href="DannyHwangCA.github.io/stylesheets/blog.css">
+
+<!-- Header Section -->
+	<body>
+	    <div class="header">
+	        DevBootCamp Cheet Sheet Page!
+	    </div>
+	    
+<!-- Header Section end -->
+
+<!-- Navigation Bar -->
+     	<div class="nav">
+	        <a class="navbutton" href="http://dannyhwangca.github.io/index.html"><span>Home</span></a> 
+                <a class="navbutton" href="https://dannyhwangca.github.io/projects/index.html">Projects</a>  
+                <a class="navbutton" href="#">Resume</a>  
+                <a class="navbutton" href="http://dannyhwangca.github.io/blog.html">Blog</a>  
+                <a class="navbutton" href="https://dannyhwangca.github.io/about.html">About Me</a>  
+                <a class="navbutton" href="https://dannyhwangca.github.io/contact.html">Contact Me</a> 
+         </div>
+  
+  
+<!-- Navigation bar end -->
+
+<!-- left Blog Post Bar -->
+      <div class="leftbar"> 
+      	<a class="intropadding" href="https://dannyhwangca.github.io/projects/index.html"> Projects </a>
+      	<a class="articlepadding" href="http://dannyhwangca.github.io//projects/cheat-sheet.html"> Ruby Hashes, Arrays, Strings, Integers!</a>
+	</div>
+<!-- left Blog Post Bar end-->
+
+<!-- My picture Box (right)-->
+        <div class="rightbar"> 
+        
+                <div class="rightbartext">
+	<main>
+
+  
+        <!-- Insert Blog Text Here -->
+
+
+
+
+      	</section>
+    	</main>
+                </div>
+        </div>        
+<!-- My picture Box (right) end-->
+
+<!-- Footer Section -->
+	<div class="footer">
+		<a href="https://www.facebook.com/" target="_blank"><img class="footerimg" src="https://github.com/DannyHwangCA/DannyHwangCA.github.io/blob/master/imgs/facebook.png?raw=true" alt="FaceBook!"></a>
+            	<a href="https://www.linkedin.com/in/DannyHwangCA" target="_blank"><img class="footerimg" src="https://github.com/DannyHwangCA/DannyHwangCA.github.io/blob/master/imgs/linkin.png?raw=true" alt="LinkedIn"></a>
+            	<a href="https://github.com/DannyHwangCA" target="_blank"><img class="footerimg" src="https://github.com/DannyHwangCA/DannyHwangCA.github.io/blob/master/imgs/git-icon.png?raw=true" alt="Github!"></a>
+	</div>
+<!-- End Footer Section -->
+
+
+	</body>
+</html>
