--- a/projects/cheat-sheet.html
+++ b/projects/cheat-sheet.html
@@ -4,8 +4,8 @@
 		<title>My Cheat Sheet</title>
 	</head>
 
-	<link rel="stylesheet" type="text/css" href="DannyHwangCA.github.io/stylesheets/default.css">
-	<link rel="stylesheet" type="text/css" href="DannyHwangCA.github.io/stylesheets/blog.css">
+	<link rel="stylesheet" type="../text/css" href="DannyHwangCA.github.io/stylesheets/default.css">
+	<link rel="stylesheet" type="../text/css" href="DannyHwangCA.github.io/stylesheets/blog.css">
 
 <!-- Header Section -->
 	<body>
