--- a/projects/index.html
+++ b/projects/index.html
@@ -33,13 +33,7 @@
 
 <h3>Ongoing Projects</h3>
 <br>
-<a class="navbutton" href="#">Solving C.J.Gregor's Quantum Composite Theory!</a>
-<br><br>
-<a class="navbutton" href="#">Analysis of Joseph Manning's wave length synopsis on particle strings.</a>
-<br><br>
-<a class="navbutton" href="#">Review of Steven Hawking's - Time Dialation and Spacial Recognition Manifest. </a>
-<br><br>
-<a class="navbutton" href="#">TBA - even more exciciting things!</a> 
+<a class="navbutton" href="https://dannyhwangca.github.io/projects/cheat-sheet.html">Cheat Sheets</a>
 
   
 </div>
