--- a/projects/index.html
+++ b/projects/index.html
@@ -31,8 +31,8 @@
 
 <div class="middlesection"
 
-<h3>Ongoing Projects</h3>
-<br>
+<h3><b></b>Projects</b></h3>
+<br><br>
 <a class="navbutton" href="https://dannyhwangca.github.io/projects/cheat-sheet.html">Cheat Sheets</a>
 
   
