--- a/projects/cheat-sheet.html
+++ b/projects/cheat-sheet.html
@@ -30,8 +30,8 @@
 
 <!-- left Blog Post Bar -->
       <div class="leftbar"> 
-      	<a class="intropadding" href="https://dannyhwangca.github.io/projects/index.html"> Projects </a>
-      	<a class="articlepadding" href="http://dannyhwangca.github.io//projects/cheat-sheet.html"> Ruby Hashes, Arrays, Strings, Integers!</a>
+      	<a class="intropadding" href="https://dannyhwangca.github.io/projects/index.html"> Back to Projects </a>
+      	<a class="articlepadding" href="http://dannyhwangca.github.io//projects/cheat-sheet.html"> Ruby Enumerables</a>
 	</div>
 <!-- left Blog Post Bar end-->
 
@@ -40,10 +40,22 @@
         
                 <div class="rightbartext">
 	<main>
-
-  
-        <!-- Insert Blog Text Here -->
-
+	<h3>Intro: This is just a simple cheat sheet detailing useful method for Ruby Enumerables.</h3>
+	
+	<h4>Ruby Enumerables</h4>
+	Ruby allows for "mixins" of code. 
+	I.E. when we write a code and want to share it with a bunch of unrelated classes, the code can be put ino a module and "mixed in" with the other classes. 
+	This ability of setting methods within modules allows for ruby to run Enumerables. 
+	<br><br>
+	In order for a class to use an Enumerable, the class must define an "each" method. 
+	<br><br>
+	And, that each method must be able to yield each item in a collection to a block. (ex: iterate through each element in an array)
+	<br><br>
+	Ennumerables provide many helpful functions: Searching, Sorting, Conditional, Looping & more
+	<br><br>
+	<h3>Enumerable Searching</h3>
+	
+	
 
 
 
