--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <!-- Header Section -->
 	
 	    <div class="header">
-	      	    Welcome to Danny Hwang's Technical Site!
+	      	    Development In Motion
 	    </div>
 	    
 <!-- Header Section end -->
