--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
-	<head>
-  <link rel="stylesheet" href="jquery.mSimpleSlidebox.css">
-  <title>My Index Page</title>
-  <link rel="stylesheet" type="text/css" href="DannyHwangCA.github.io/stylesheets/default.css">
- 	</head>
+	<head>    
+		<title>My Index Page</title>
+		<link rel="stylesheet" type="text/css" href="DannyHwangCA.github.io/stylesheets/default.css">
+	</head>
 	<body>
   
 <!-- Navigation Bar -->
@@ -28,33 +27,9 @@
 <!-- Header Section end -->
 
 <!-- left Banner Box -->
-    <div class="slidebox">
-      <ul>
-        <li>
-            <div>slide 1 content</div>
-        </li>
-        <li>
-            <div>slide 2 content</div>
-        </li>
-        <li>
-            <div>slide 3 content</div>
-        </li>
-        <li>
-            <div>slide 4 content</div>
-        </li>
-      </ul>
+  <div class="leftside"> 
+
   </div>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
-    <script src="jquery.mSimpleSlidebox.js"></script>
-    <script>
-    (function($){
-        $(document).ready(function(){
-            $(".slidebox").mSlidebox();
-        });
-    })(jQuery);
-    </script>
-  
 <!-- left Banner Box end-->
 
 <!-- Footer Section -->
@@ -64,3 +39,7 @@
             <a href="https://github.com/DannyHwangCA" target="_blank"><img class="footerimg" src="https://github.com/DannyHwangCA/DannyHwangCA.github.io/blob/master/imgs/git-icon.png?raw=true" alt="Github!"></a>
 		</div>
 <!-- End Footer Section -->
+
+
+	</body>
+</html>
