--- a/index.html
+++ b/index.html
@@ -11,20 +11,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script src="js/jquery.nivo.slider.pack.js"></script>
-<!-- Slider -->
 
-
-<script>
-    $(window).load(function() {
-        $('#slider').nivoSlider({
-            directionNavHide: false,
-            captionOpacity: 1,
-            prevText: '<',
-            nextText: '>'
-        });
-    });
-</script>
-<!-- Slider -->
 
 
 <!-- Navigation Bar -->
@@ -70,3 +57,6 @@
             <a href="https://github.com/DannyHwangCA" target="_blank"><img class="footerimg" src="https://github.com/DannyHwangCA/DannyHwangCA.github.io/blob/master/imgs/git-icon.png?raw=true" alt="Github!"></a>
 		</div>
 <!-- End Footer Section -->
+
+</body
+</html>
