--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ var ns6 = document.getElementById&&!document.all; //detect netscape 6
 
 // place your images, text, etc in the array elements here
 var items = new Array();
-    items[0]="<a href='https://dannyhwangca.github.io/contact.html' ><img alt='ASK Banner' src='http://imgur.com/rtIaVDO' border='0' /></a>"; //a linked image
+    items[0]="<a href='https://dannyhwangca.github.io/contact.html' ><img alt='ASK Banner' src='http://i.imgur.com/rtIaVDO.png' border='0' /></a>"; //a linked image
     items[1]="<a href='link.htm'><img alt='image1 (9K)' src='/Images/image1.jpg' height='300' width='300' border='0' /></a>"; //a linked image
     items[2]="<a href='link.htm'><img alt='image2 (9K)' src='/Images/image2.jpg' height='300' width='300' border='0' /></a>"; //a linked image
 function rotater() {
