--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ var ns6 = document.getElementById&&!document.all; //detect netscape 6
 
 // place your images, text, etc in the array elements here
 var items = new Array();
-    items[0]="<a href='https://dannyhwangca.github.io/contact.html' ><img alt='Intro Banner' src='https://i.imgur.com/pKJqYLJ.png' border='0' /></a>"; //a linked image
+    items[0]="<a href='https://dannyhwangca.github.io/contact.html' ><img alt='Intro Banner' src='http://i.imgur.com/WxglCe0.png' border='0' /></a>"; //a linked image
     items[1]="<a href='https://dannyhwangca.github.io/contact.html'><img alt='ASK banner' src='http://i.imgur.com/IxcIZH1.png'  border='0' /></a>"; //a linked image
     items[2]="<a href='https://dannyhwangca.github.io/about.html'><img alt='Coffee Banner' src='http://i.imgur.com/kSBLc6C.png' border='0' /></a>"; //a linked image
 function rotater() {
