--- a/git.html
+++ b/git.html
@@ -19,14 +19,15 @@
          </div>
 <!-- Navigation bar end -->
 
+<!-- Blog line -->
 <!-- Header Section -->
 	<body>
 	    <div class="header">
-	        Welcome To My Blog Page!
 	    </div>
 	    
 <!-- Header Section end -->
 
+<!-- Eng blog line -->
 
 <!-- left Blog Post Bar -->
       <div class="leftbar"> 
