--- a/git.html
+++ b/git.html
@@ -99,6 +99,10 @@
         </div>        
 <!-- My picture Box (right) end-->
 
+<!-- Blog line -->
+<hr>
+<!-- Eng blog line -->
+
 <!-- Footer Section -->
 	<div class="footer">
 		<a href="https://www.facebook.com/" target="_blank"><img class="footerimg" src="https://github.com/DannyHwangCA/DannyHwangCA.github.io/blob/master/imgs/facebook.png?raw=true" alt="FaceBook!"></a>
