--- a/git.html
+++ b/git.html
@@ -20,7 +20,7 @@
 <!-- Navigation bar end -->
 
 <!-- Blog line -->
-<hr>
+<div class = "line"></div>
 <!-- Eng blog line -->
 
 <!-- left Blog Post Bar -->
@@ -100,7 +100,7 @@
 <!-- My picture Box (right) end-->
 
 <!-- Blog line -->
-<hr>
+<div class = "line"></div>
 <!-- Eng blog line -->
 
 <!-- Footer Section -->
