--- a/blog.html
+++ b/blog.html
@@ -45,19 +45,26 @@
                 <p>
                 Hello all!
                 <br><br>
-                Welcome to my introduction page!
+                Welcome to my blog page!
                 <br><br>
-                Current Updates This Week: 
+                I use this blog to solidify concepts regarding coding and the modern tech industry. 
+                <br><br>
+                Feel free to browse the topics and let me know what you think!
+                <br><br>
+                Updates:
                     <ul>
-                        <li>Update Index site with CSS!</li>
-                        <li>Update Blog Site with CSS!</li>
-                        <li>Update Blog Site with Week 3 Blog</li>
+                        <li>Update full site with CSS.</li>
+                        <li>Update Blog Site with CSS.</li>
+                        <li>Update Blog templates with CSS.</li>
+                        <li>Add email contact template.</li>
+                        <li>Add contact information update.</li>
+                        <li>Add projects template update.</li>
                     </ul>
                 Upcoming Updates:
                      <ul>
-                        <li>Ruby</li>
-                        <li>GPS week 2 series</li>
-                        <li>Additional upgrades to site!</li>
+                        <li>Additional project updates.</li>
+                        <li>Additonal blog posts.</li>
+                        <li>Additional upgrades to site.</li>
                     </ul>
                 </div>
         </div>        
