--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
 
 <!-- Middle Section -->
 
-<div class="middlesection"
+<div class="middlesection-contact"
 
 <form name="contactform" method="post" action="send_form_email.php">
 <table width="450px">
