--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
 
 <div class="middlesection-compact"
 
-<form name="contactform" method="post" action="send_form_email.php">
+<form name="contactform" method="post" action="DannyHwangCA.github.io/send_form_email.php">
 <table width="450px">
 <tr>
  <td valign="top">
